refactor(测试计划): 优化规划脑图临时节点的保存
--bug=1044404 --user=宋昌昌 【测试计划】测试规划中新增接口和场景的测试集-关联功能用例时开启同步关联接口和场景时，测试集未更新 https://www.tapd.cn/55049933/s/1563934